--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/bcryptjs": "^3.0.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.9",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "openai": "^4.101.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "stripe": "^18.1.1"
