--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "openai": "^4.101.0",
